Enhance chatbot styles: adjust max-height for chatbox and prevent body scroll on mobile when chatbot is active

--- a/chatbot-fa.css
+++ b/chatbot-fa.css
@@ -222,6 +222,7 @@
     /*todo chatbot */
     .chatbot {
         right: 0px;
+        left: 0px;
         bottom: 0px;
         width: 100%;
         height: 100%;
@@ -229,10 +230,16 @@
     }
     .chatbot .chatbox {
         height: 90%;
-        max-height: 90%;
+        max-height: 80vh;
     }
     .chatbot header button {
         display: block;
+    }
+    /* Prevent body scroll when chatbot is open on mobile */
+    body:has(#aida-chatbot-container.show-chatbot) {
+        overflow: hidden;
+        position: fixed;
+        width: 100%;
     }
 }
 @media only screen and (max-height: 480px) {
